<resources>
    <string name="facebook_app_id">1781982312059300</string>
    <string name="twitter_api_key">A6Z21iFfQ9MJkuhYNdUPlNEa5</string>
    <string name="twitter_consumer_key">A6Z21iFfQ9MJkuhYNdUPlNEa5</string>
    <string name="twitter_consumer_secret">CrOF4snEYY0agLhPcG2QjkUlbMKPBMOGh1Kl0VbQd4OjbIKtez</string>
    <string name="app_name">My Memory</string>
    <string name="user_profile_name">User Name</string>
    <string name="action_search">Search</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="persian">فارسی</string>
    <string name="english">English</string>
    <string name="arabic">العربیه</string>
    <string name="log_in_tour_button_title">Take A tour</string>
    <string name="log_in_user_name">User Name</string>
    <string name="log_in_password">Password</string>
    <string name="log_in_confirm_password">Confirm</string>
    <string name="log_in_email">Email</string>
    <string name="log_in_forgot_password">Forgot Password</string>
    <string name="log_in_page_sin_up">Sign Up</string>
    <string name="log_in_page_sign_in">Sign in</string>
    <string name="log_in_enter_with_account">or Enter Your Account</string>
    <string name="tab_one">Groups</string>
    <string name="tab_two">MemoryBank</string>
    <string name="tab_three">Store</string>
    <string name="new_group_dialog_title">Add New group</string>
    <string name="new_sub_group_dialog_title">Select Group</string>
    <string name="add_a_sub_group_to">Add New sub Group To</string>
    <string name="new_course_dialog_title">Select Sub Group</string>
    <string name="add_a_course_to">Add A Course To </string>
    <string name="color">Color</string>
    <string name="direct_entry_on">Direct entry:on</string>
    <string name="direct_entry_off">Direct entry:off</string>
    <string name="information">Information</string>
    <string name="edit_name">Edit Name</string>
    <string name="set_the_level">Set Level</string>
    <string name="delete">Delete</string>
    <string name="user_profile">User Panel</string>
    <string name="my_activities">My Activities</string>
    <string name="shared_flashcard">Shared flashcard</string>
    <string name="dictionary">Dictionary</string>
    <string name="add_card_from_excel">Add Card from Excel</string>
    <string name="help">Guide</string>
    <string name="setting_app">Setting</string>
    <string name="ticket">Ticket</string>
    <string name="rate_us">Rate Us</string>
    <string name="about_us">About Us</string>
    <string name="exit">Exit</string>
    <string name="question">Question</string>
    <string name="course">Course</string>
    <string name="group">Group</string>
    <string name="sub_group">Sub Group</string>
    <string name="save">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_edit_group_title">Edit Group</string>
    <string name="dialog_edit_group_name">Name : </string>
    <string name="dialog_edit_group_description">Description</string>
    <string name="dialog_delete_group_title">When delete group then all question of this group :</string>
    <string name="sub_group_activity_title">Sub group</string>
    <string name="action_back">Back</string>
    <string name="dialog_edit_sub_group_title">Edit Sub Group</string>
    <string name="dialog_edit_sub_group_name">Name : </string>
    <string name="dialog_edit_sub_group_description">Description : </string>
    <string name="dialog_delete_sub_group_title">When delete Sub group then all question of this Sub group :</string>
    <string name="speed_learning">Speed Learn</string>
    <string name="growth_flashcards">Growth flash Cards</string>
    <string name="all_cart">All cart</string>
    <string name="ready_to_learn">Ready to Learn</string>
    <string name="create_date">Create Date</string>
    <string name="last_seen">Last seen</string>
    <string name="group_diagram_title">Groups Statistics</string>
    <string name="lesson">Lesson</string>
    <string name="m_sub_group">Sub Group</string>
    <string name="m_group">Group</string>
    <string name="m_delete">Delete</string>
    <string name="m_change_lesson">Change Lesson</string>
    <string name="m_multi_selected">Multi Selected</string>
    <string name="m_edit">Edit</string>
    <string name="m_filter_group">Group</string>
    <string name="m_filter_priority">Priority</string>
    <string name="m_hard">Hard question</string>
    <string name="m_favourite">Favourite</string>
    <string name="m_sorted_by_question_seen_message">Sorted by number of display Questions</string>
    <string name="m_sorted_by_answer_seen_message">Sorted by number of display Answer</string>
    <string name="m_sorted_by_question_true_message">Sorted by number of true Answer</string>
    <string name="m_sorted_by_question_wrong_message">Sorted by number of wrong Answer</string>
    <string name="exam_activity_title">Exam</string>
    <string name="answer_one">1</string>
    <string name="answer_two">2</string>
    <string name="answer_three">3</string>
    <string name="answer_four">4</string>
    <string name="answer">yes,it is easy</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="end">end</string>
    <string name="exam_dialog_title">The number of test questions</string>
    <string name="exam_dialog_all_question_course">All Question Of this Course</string>
    <string name="result">result</string>
    <string name="question_activity_title">See Question</string>
    <string name="hard_question">Hard</string>
    <string name="question_description">pro: \n syn:This is synonym that \n opp:Hard \n example: \n it is so easy</string>
    <string name="answer_know">I Know</string>
    <string name="answer_no_know">I Dont Know</string>
    <string name="know_number_question_title">Number of  Correct Question :</string>
    <string name="no_Know_question_title">Number of  InCorrect Question :</string>
    <string name="touch_card_seen_answer">Touch to view the answer</string>
    <string name="settings_activity_title">Settings</string>
    <string name="setting_language">Application Language</string>
    <string name="settings_app_color">Application color</string>
    <string name="settings_font_size">Font size</string>
    <string name="settings_view_dictionary">View the dictionary in Question</string>
    <string name="settings_view_voice_button">View the Voice in Question</string>
    <string name="settings_view_hard_button">View Hard Button in Questions</string>
    <string name="settings_direct_entry_subGroup">Direct entry to SubGroup</string>
    <string name="settings_change_question_and_answer">Change question and answer</string>
    <string name="settings_play_automatic_voice">Play automatic pronunciation of words</string>
    <string name="setting_backup">BackUp</string>
    <string name="settings_retrieval">Retrieval settings</string>
    <string name="settings_app_update">Update</string>
    <string name="setting_cancel">cancel</string>
    <string name="setting_save">save</string>
    <string name="color_picker_dialog_title">Choose color</string>
    <string name="select_language">Select Language</string>
    <string name="settings_night_vision">The screen does not turn off</string>
    <string name="settings_general_title">General Setting</string>
    <string name="settings_group_title">Groups</string>
    <string name="settings_group_color_priority">Color Priority</string>
    <string name="settings_group_color_success_learn_item">Color of Success Learn Cart</string>
    <string name="settings_question_title">Question</string>
    <string name="settings_level_number_title">Default levels setting</string>
    <string name="settings_automatic_rtl_ltr">Set Automatic RTL and LTR</string>
    <string name="settings_reminder_title">Reminder</string>
    <string name="settings_reminder_description">Reminder For Study and Learn</string>
    <string name="setting_more_button_text">More</string>
    <string name="setting_button_select_time">Time</string>
    <string name="setting_button_select_time_Default">8:00 am</string>
    <string name="setting_spinner_select_day">Day</string>
    <string name="setting_message_select_day">Select Day</string>
    <string name="setting_message_select_Time">Select Time</string>
    <string name="settings_backup_title">Backup</string>
    <string name="settings_backup_time_title">Backup Time Frequency</string>
    <string name="settings_backup_email_title">Email backup files?</string>
    <string name="no">No</string>
    <string name="level_title_page">Level Of Course</string>
    <string name="level_ready">Ready</string>
    <string name="level_total">Total</string>
    <string name="level_add_new_question">Add new question</string>
    <string name="level_add_free_question">Add free questions</string>
    <string name="level_add_question_from_excel">Add questions from excel</string>
    <string name="level_view_question_list">View questions list</string>
    <string name="level_share_course">Share Course</string>
    <string name="level_review_questions">Review questions </string>
    <string name="level_view_hard_questions">View hard questions</string>
    <string name="level_view_favourite">View favorite questions</string>
    <string name="level_exam">Test</string>
    <string name="success_learn">Learned Successfully</string>
    <string name="level_ready_message">The number of questions ready to learn this lesson:</string>
    <string name="level_total_message">The number of total questions to learn this lesson:</string>
    <string name="level_success_learn_message">The number of success to learn this lesson:</string>
    <string name="create_question_activity_title">Add New Question</string>
    <string name="add_question_group">Group</string>
    <string name="add_question_sub_group">Sub Group</string>
    <string name="add_question_course">Course</string>
    <string name="add_question_question">Question</string>
    <string name="add_question_answer">Answer</string>
    <string name="add_question_description">Description</string>
    <string name="add_question_add_voice">Add voice</string>
    <string name="add_question_add_image">Add Picture</string>
    <string name="add_question_pronunciation">pronunciation</string>
    <string name="add_question_synonym">synonym</string>
    <string name="add_question_antonym">antonym</string>
    <string name="add_question_example">example</string>
    <string name="spinner_select_group">Group</string>
    <string name="spinner_select_sub_group">Sub Group</string>
    <string name="spinner_select_course">Course</string>
    <string name="level_setting_activity_title">Level Setting</string>
    <string name="level_setting_select_level_number">Select Level Number</string>
    <string name="level_number">level</string>
    <string name="level_default">Default</string>
    <string name="level_setting_select_time_type_hour">Hour</string>
    <string name="level_setting_select_time_type_day">Day</string>
    <string name="level_setting_animation_type">Type Of animation</string>
    <string name="review_question">Review Questions</string>
    <string name="dialog_flash_description_title">Description</string>
    <string name="dialog_flash_description_author">Author</string>
    <string name="dialog_flash_description_download_size">Size</string>
    <string name="dialog_flash_description_created_date">Created date</string>
    <string name="dialog_flash_description_last_modified">Last modified</string>
    <string name="dialog_flash_description_cards">Cards</string>
    <string name="dialog_flash_description_viewed">Viewed</string>
    <string name="dialog_flash_description_download">Download</string>
    <string name="dialog_flash_description_cards_review">Cards review</string>
</resources>