<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/information"
        android:title="@string/information"
        app:showAsAction="always" />
    <item
        android:id="@+id/edit_name"
        android:title="@string/edit_name"
        app:showAsAction="always" />
    <item
        android:id="@+id/review_question"
        android:title="@string/review_question"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_level_view_question_list"
        android:title="@string/level_view_question_list"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_level_view_hard_questions"
        android:title="@string/level_view_hard_questions"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_level_view_favourite"
        android:title="@string/level_view_favourite"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_course_exam"
        android:title="@string/level_exam"
        app:showAsAction="always"/>
    <item
        android:id="@+id/color"
        android:title="@string/color"
        app:showAsAction="always" />
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        app:showAsAction="always" />
</menu>