<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/information"
        android:title="@string/information"
        app:showAsAction="always" />
    <item
        android:id="@+id/edit_name"
        android:title="@string/edit_name"
        app:showAsAction="always" />
    <item
        android:id="@+id/setLevel"
        android:title="@string/set_the_level"
        app:showAsAction="always" />
    <item
        android:id="@+id/color"
        android:title="@string/color"
        app:showAsAction="always" />

    <item android:id="@+id/direct_entry"
        android:title="@string/direct_entry_on"
        app:showAsAction="always"/>

    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        app:showAsAction="always" />
</menu>