<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@mipmap/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_persian_languge"
        android:orderInCategory="100"
        android:title="@string/persian"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_english_languge"
        android:orderInCategory="100"
        android:title="@string/english"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_arabic_language"
        android:orderInCategory="100"
        android:title="@string/arabic"
        app:showAsAction="never"/>


</menu>
