<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end"
        android:backgroundTint="@color/exam_end_button_color"
        android:textColor="@color/white"
        android:id="@+id/exam_end"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:backgroundTint="@color/exam_prev_button_color"
        android:textColor="@color/white"
        android:id="@+id/prev_question"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:backgroundTint="@color/exam_next_button_color"
        android:textColor="@color/white"
        android:id="@+id/nav_exit"/>

</LinearLayout>