<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_reminder_title"
        android:layout_marginRight="@dimen/margin_recycler_view_right"
        android:layout_marginLeft="@dimen/margin_recycler_view_right"
        android:layout_marginTop="@dimen/margin_recycler_view_top"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/margin_recycler_view_right"
        android:layout_marginLeft="@dimen/margin_recycler_view_right"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:contentPadding="@dimen/card_content_padding"
        card_view:cardElevation="@dimen/card_elevation"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_reminder_description"/>
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/setting_reminder_recycler_view"
                android:layout_marginTop="@dimen/margin_recycler_view_top">
            </android.support.v7.widget.RecyclerView>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/btn_add_reminder"
                android:background="@null"
                android:text="@string/setting_more_button_text"
                android:layout_marginTop="@dimen/margin_recycler_view_top"
                android:drawableRight="@mipmap/plus_black" />

            <include layout="@layout/settings_activity_reminder_new"/>

        </LinearLayout>



    </android.support.v7.widget.CardView>
</LinearLayout>
