<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_shared_cards_title"
            android:text="@string/dialog_flash_description_title"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_shared_cards_description_value"
            android:text="There are many people on the world. Some of them are tall and .."
            android:textColor="@color/black"
            android:layout_marginTop="3dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_light"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_shared_cards_author_title"
                android:text="@string/dialog_flash_description_author"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_shared_cards_author_value"
                android:text="Dr AlHashem"
                android:textColor="@color/black"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_shared_cards_download_size_title"
                android:text="@string/dialog_flash_description_download_size"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_shared_cards_download_size_value"
                android:text="1M"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_light"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_shared_cards_create_time_title"
                android:text="@string/dialog_flash_description_created_date"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_shared_cards_create_time_value"
                android:text="11/05/2016"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_shared_cards_last_modified_title"
                android:text="@string/dialog_flash_description_last_modified"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_shared_cards_last_modified_value"
                android:text="11/06/2016"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_light"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_shared_cards_cards_title"
                android:text="@string/dialog_flash_description_cards"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_shared_cards_cards_value"
                android:text="54"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_shared_cards_viewed_title"
                android:text="@string/dialog_flash_description_viewed"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_shared_cards_viewed_value"
                android:text="126"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_shared_cards_download_title"
                android:text="@string/dialog_flash_description_download"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_shared_cards_download_value"
                android:text="23"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/dialog_flash_description_cards_review"
                    android:textColor="@color/white"
                    android:background="@drawable/button_with_corner_green"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:id="@+id/btn_dialog_shared_cards_cards_review"
                    style="?android:attr/buttonStyleSmall"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">
                <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:id="@+id/btn_dialog_shared_cards_downloads"
                    android:src="@drawable/cloud_download"
                    android:background="@null"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
